@@ -1,3 +1,8 @@
+2016-01-12  Danilo Chang  <ray2501@gmail.com>
+
+    * generic/mdb.c: Update LMDB source code.
+    * generic/tclmdb.c: Update year
+
 2016-01-04  Danilo Chang  <ray2501@gmail.com>
 
     * generic/mdb.c: Update LMDB source code.
